# mktgcompass

./: .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  KICKOFF.md  docker-compose.yml
.claude/skills/: dashboard-components.md  data-validation.md  meridian-mmm.md  ship-it.md
backend/: Dockerfile  main.py  pyproject.toml
backend/data/: sample_data.csv
backend/modal_app/: train.py
backend/models/: database.py  schemas.py
backend/routers/: chat.py  model.py  upload.py
backend/services/: chat_agent.py  data_validator.py  meridian_runner.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/attribution/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/attribution/: page.tsx
frontend/app/experiments/: page.tsx
frontend/app/insights/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/cards/: InsightCard.tsx  KPICard.tsx
frontend/components/charts/: AdstockDecay.tsx  BudgetAllocator.tsx  ContributionAreaChart.tsx  ConvergenceDiagnostics.tsx  EfficiencyMatrix.tsx  HillCurve.tsx  ModelFitChart.tsx  ROIBarChart.tsx  SaturationCurve.tsx  WaterfallChart.tsx
frontend/components/layout/: ChatPanel.tsx  DemoBanner.tsx  Sidebar.tsx  TopBar.tsx
frontend/components/marketing/: BentoGrid.tsx  FeatureShowcase.tsx  Footer.tsx  Hero.tsx  MarketingNav.tsx  ValueProps.tsx
frontend/components/upload/: CSVUploader.tsx
frontend/lib/: api.ts  demo-data.ts  types.ts  utils.ts
(+6 files in other folders)
